objects/ssot__Employment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeId__c</fullName>
        <label>Employee</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeUserId__c</fullName>
        <label>Employee User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentScheduleType__c</fullName>
        <label>Employment Schedule Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentStatus__c</fullName>
        <label>Employment Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentType__c</fullName>
        <label>Employment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Employment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366625899_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employment_EmployeeId_map_Employee_I_rel</label>
        <referenceTo>ssot__Employee__dlm</referenceTo>
        <relationshipLabel>Employment_EmployeeId_map_Employee_I_rel</relationshipLabel>
        <relationshipName>rel_1727366625899_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366711800_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employment_EmployeeUserId_map_User_I_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Employment_EmployeeUserId_map_User_I_rel</relationshipLabel>
        <relationshipName>rel_1727366711800_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>